--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_REPO_NAME: "mybackendapp"  # Replace with your ECR repo name
-    IMAGE_TAG: "latest"              # You can modify the tag if necessary
-    AWS_DEFAULT_REGION: "us-east-1"  # Replace with your region
+    # IMAGE_REPO_NAME: "mybackendapp"  # Replace with your ECR repo name
+    # IMAGE_TAG: "latest"              # You can modify the tag if necessary
+    # AWS_DEFAULT_REGION: "us-east-1"  # Replace with your region
 
 phases:
   install:
@@ -25,8 +25,7 @@ phases:
     commands:
       # Log in to AWS ECR
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $IMAGE_REPO_NAME.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 423623860069.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       # Build the Maven project with Java 17
@@ -37,13 +36,13 @@ phases:
     commands:
       # Build the Docker image using the Dockerfile
       - echo Building Docker image...
-      - docker build -t $IMAGE_REPO_NAME .
+      - docker build -t mybackendapp .
       # Tag the image with the ECR repository URI
       - echo Tagging Docker image...
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $IMAGE_REPO_NAME.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker tag mybackendapp:latest 423623860069.dkr.ecr.us-east-1.amazonaws.com/mybackendapp:latest
       # Push the Docker image to Amazon ECR
       - echo Pushing Docker image to ECR...
-      - docker push $IMAGE_REPO_NAME.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker push 423623860069.dkr.ecr.us-east-1.amazonaws.com/mybackendapp:latest
 
 artifacts:
   files:
