--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://192.168.68.214:3306/demo?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
